--- a/draft-lundberg-app-tei-xml-09.html
+++ b/draft-lundberg-app-tei-xml-09.html
@@ -153,10 +153,10 @@
 <tr><td class="header">Network Working Group</td><td class="header">L. Romary</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">TEI Consortium and INRIA</td></tr>
 <tr><td class="header">Intended status: Informational</td><td class="header">S. Lundberg</td></tr>
-<tr><td class="header">Expires: May 15, 2011</td><td class="header">The Royal Library, Copenhagen</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">November 11, 2010</td></tr>
+<tr><td class="header">Expires: May 16, 2011</td><td class="header">The Royal Library, Copenhagen</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">November 12, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />The 'application/tei+xml' mediatype<br />draft-lundberg-app-tei-xml-08</h1>
+<h1><br />The 'application/tei+xml' mediatype<br />draft-lundberg-app-tei-xml-09</h1>
 
 <h3>Abstract</h3>
 
@@ -179,7 +179,7 @@ and may be updated, replaced, or obsoleted by other documents at any time.
 It is inappropriate to use Internet-Drafts as reference material or to cite
 them other than as &ldquo;work in progress.&rdquo;</p>
 <p>
-This Internet-Draft will expire on May 15, 2011.</p>
+This Internet-Draft will expire on May 16, 2011.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -258,9 +258,9 @@ Recognizing TEI files</h3>
 	The most common root element names for TEI documents are
 	</p>
 <blockquote class="text">
-<p>TEI
+<p>&lt;TEI&gt;
 </p>
-<p>teiCorpus
+<p>&lt;teiCorpus&gt;
 </p>
 </blockquote><p> 
       
@@ -272,45 +272,45 @@ Recognizing TEI files</h3>
 	Examples:
 	</p>
 <blockquote class="text">
-<p>A document beginning with &lt;TEI
+<p>A document having &lt;TEI&gt; root element
 	  </p>
 <div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
 	    &lt;?xml version="1.0" encoding="UTF-8" ?&gt;
 	    &lt;TEI xmlns="http://www.tei-c.org/ns/1.0"&gt;
-	    &lt;teiHeader&gt;
-	    ...
-	    &lt;/teiHeader&gt;
-	    &lt;text&gt;
-	    ...
-	    &lt;/text&gt;
+	       &lt;teiHeader&gt;
+	       ...
+	       &lt;/teiHeader&gt;
+	       &lt;text&gt;
+	       ...
+	       &lt;/text&gt;
 	    &lt;/TEI&gt;
 </pre></div><p>
 
 
 	  
 </p>
-<p>A document beginning with &lt;teiCorpus
+<p>A document having &lt;teiCorpus&gt; root element
 	  </p>
 <div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
 	    &lt;?xml version="1.0" encoding="UTF-8" ?&gt;
 	    &lt;teiCorpus  xmlns="http://www.tei-c.org/ns/1.0"&gt;
-	    &lt;teiHeader&gt;
-	    ...
-	    &lt;/teiHeader&gt;
-	    &lt;TEI&gt;
-	    &lt;teiHeader&gt;
-	    ...
-	    &lt;/teiHeader&gt;
-	    &lt;text&gt;
-	    ...
-	    &lt;/text&gt;
-	    &lt;/TEI&gt;
-	    &lt;TEI&gt;
-	    ... second document ...
-	    &lt;/TEI&gt;
-	    &lt;TEI&gt;
-	    ... third document  ...
-	    &lt;/TEI&gt;
+	       &lt;teiHeader&gt;
+	       ...
+	       &lt;/teiHeader&gt;
+	       &lt;TEI&gt;
+	          &lt;teiHeader&gt;
+	          ...
+	          &lt;/teiHeader&gt;
+	          &lt;text&gt;
+	          ...
+	          &lt;/text&gt;
+	       &lt;/TEI&gt;
+	       &lt;TEI&gt;
+	       ... second document ...
+	       &lt;/TEI&gt;
+	       &lt;TEI&gt;
+	       ... third document  ...
+	       &lt;/TEI&gt;
 	    &lt;/teiCorpus&gt;
 </pre></div><p>
 
