draft-altman-tls-channel-bindings-09

--- a/draft-altman-tls-channel-bindings-09.html
+++ b/draft-altman-tls-channel-bindings-09.html
@@ -159,7 +159,7 @@
 <tr><td class="header">&nbsp;</td><td class="header">Microsoft Corporation</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">March 23, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />Channel Bindings for TLS<br />draft-altman-tls-channel-bindings-08.txt</h1>
+<h1><br />Channel Bindings for TLS<br />draft-altman-tls-channel-bindings-09.txt</h1>
 
 <h3>Abstract</h3>
 
@@ -224,37 +224,37 @@ than English.</p>
 Conventions used in this document<br />
 <a href="#intro">2.</a>&nbsp;
 Introduction<br />
-<a href="#anchor2">3.</a>&nbsp;
+<a href="#tls-unique">3.</a>&nbsp;
 The 'tls-unique' Channel Binding Type<br />
-<a href="#anchor3">3.1.</a>&nbsp;
+<a href="#anchor2">3.1.</a>&nbsp;
 Description<br />
-<a href="#anchor4">3.2.</a>&nbsp;
+<a href="#anchor3">3.2.</a>&nbsp;
 Registration<br />
-<a href="#anchor5">4.</a>&nbsp;
+<a href="#anchor4">4.</a>&nbsp;
 The 'tls-server-end-point' Channel Binding Type<br />
 <a href="#tsep-desc">4.1.</a>&nbsp;
 Description<br />
-<a href="#anchor6">4.2.</a>&nbsp;
+<a href="#anchor5">4.2.</a>&nbsp;
 Registration<br />
-<a href="#anchor7">5.</a>&nbsp;
+<a href="#anchor6">5.</a>&nbsp;
 The 'tls-unique-for-telnet' Channel Binding Type<br />
-<a href="#anchor8">5.1.</a>&nbsp;
+<a href="#anchor7">5.1.</a>&nbsp;
 Description<br />
-<a href="#anchor9">5.2.</a>&nbsp;
+<a href="#anchor8">5.2.</a>&nbsp;
 Registration<br />
-<a href="#anchor10">6.</a>&nbsp;
+<a href="#anchor9">6.</a>&nbsp;
 Applicability of TLS Channel Binding Types<br />
-<a href="#anchor11">7.</a>&nbsp;
+<a href="#anchor10">7.</a>&nbsp;
 Required Application Programming Interfaces<br />
 <a href="#changes">8.</a>&nbsp;
 Description of backwards-incompatible changes made herein to 'tls-unique'<br />
-<a href="#anchor12">9.</a>&nbsp;
+<a href="#anchor11">9.</a>&nbsp;
 IANA Considerations<br />
-<a href="#anchor13">10.</a>&nbsp;
+<a href="#seccons">10.</a>&nbsp;
 Security Considerations<br />
-<a href="#anchor14">10.1.</a>&nbsp;
+<a href="#anchor12">10.1.</a>&nbsp;
 Cryptographic Algorithm Agility<br />
-<a href="#anchor15">10.2.</a>&nbsp;
+<a href="#anchor13">10.2.</a>&nbsp;
 On Disclosure of Channel Bindings Data by
 		Authentication Mechanisms<br />
 <a href="#rfc.references1">11.</a>&nbsp;
@@ -315,19 +315,19 @@ Introduction</h3>
 		makes a backwards-incompatible change to 'tls-unique'.
 		See <a class='info' href='#changes'>Section&nbsp;8<span> (</span><span class='info'>Description of backwards-incompatible changes made herein to 'tls-unique'</span><span>)</span></a> for more details.
 </p>
-<a name="anchor2"></a><br /><hr />
+<a name="tls-unique"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.3"></a><h3>3.&nbsp;
 The 'tls-unique' Channel Binding Type</h3>
 
 <p>IANA is hereby directed to update the registration of the
 		'tls-unique' channel binding type to match the
-		following.  There are material changes from the original
-		registration, both in the description as well as
-		registration meta-data (such as registration
+		following.  There are material and substantial changes
+		from the original registration, both in the description
+		as well as registration meta-data (such as registration
 		ownership).
 </p>
-<a name="anchor3"></a><br /><hr />
+<a name="anchor2"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.3.1"></a><h3>3.1.&nbsp;
 Description</h3>
@@ -347,7 +347,28 @@ Description</h3>
 		    the first Finished message is sent by the
 		    server.
 </p>
-<a name="anchor4"></a><br /><hr />
+<p>Interoperability note: this definition of tls-unique
+		    means that the channel's bindings data may change
+		    over time, which in turn creates a synchronization
+		    problem should the channel's bindings data change
+		    between the time that the client initiates
+		    authentication with channel
+		    binding and the time that the server begins to
+		    process the client's first authentication message.
+		    If that happens the authentication will fail
+		    spuriously.  To avoid this problem client
+		    applications SHOULD ensure that TLS re-negotiation
+		    does not occur between the start and completion of
+		    authentication.
+</p>
+<p>WARNING: The definition, security and
+		    interoperability considerations of this channel
+		    binding type have changed since the original
+		    registration.  Implementors should read the document
+		    that last updated this registration for more
+		    information.
+</p>
+<a name="anchor3"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.3.2"></a><h3>3.2.&nbsp;
 Registration</h3>
@@ -389,7 +410,7 @@ Registration</h3>
 
 		
 </p>
-<a name="anchor5"></a><br /><hr />
+<a name="anchor4"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.4"></a><h3>4.&nbsp;
 The 'tls-server-end-point' Channel Binding Type</h3>
@@ -449,7 +470,7 @@ Description</h3>
 		    binding of a TLS session in kernel-mode memory,
 		    which is often at a premium.
 </p>
-<a name="anchor6"></a><br /><hr />
+<a name="anchor5"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.4.2"></a><h3>4.2.&nbsp;
 Registration</h3>
@@ -494,7 +515,7 @@ Registration</h3>
 
 		
 </p>
-<a name="anchor7"></a><br /><hr />
+<a name="anchor6"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5"></a><h3>5.&nbsp;
 The 'tls-unique-for-telnet' Channel Binding Type</h3>
@@ -512,7 +533,7 @@ The 'tls-unique-for-telnet' Channel Binding Type</h3>
 		registration are copied here for the convenience of
 		readers.
 </p>
-<a name="anchor8"></a><br /><hr />
+<a name="anchor7"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5.1"></a><h3>5.1.&nbsp;
 Description</h3>
@@ -530,7 +551,7 @@ Description</h3>
 		    server does the same but in the opposite
 		    concatenation order (server, then client).
 </p>
-<a name="anchor9"></a><br /><hr />
+<a name="anchor8"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.5.2"></a><h3>5.2.&nbsp;
 Registration</h3>
@@ -575,7 +596,7 @@ Registration</h3>
 
 		
 </p>
-<a name="anchor10"></a><br /><hr />
+<a name="anchor9"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.6"></a><h3>6.&nbsp;
 Applicability of TLS Channel Binding Types</h3>
@@ -695,7 +716,7 @@ Applicability of TLS Channel Binding Types</h3>
 		SHOULD have a preference for 'tls-unique' over
 		'tls-server-end-point'.
 </p>
-<a name="anchor11"></a><br /><hr />
+<a name="anchor10"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.7"></a><h3>7.&nbsp;
 Required Application Programming Interfaces</h3>
@@ -747,7 +768,37 @@ Description of backwards-incompatible changes made herein to 'tls-unique'</h3>
 		has taken place before application-layer authentication,
 		and b) that one handshake was a full handshake.
 </p>
-<a name="anchor12"></a><br /><hr />
+<p>This change has a number of implications:
+
+		</p>
+<ul class="text">
+<li>Backwards-incompatibility.  It is possible that
+			some implementations of the original
+			'tls-unique' channel binding type may have been
+			deployed.  We know of at least one TLS
+			implementation that exports 'tls-unique' channel
+			bindings with the original semantics, but we
+			know of no deployed application using the
+			same.  Implementations of the original and new
+			'tls-unique' channel binding type will only
+			interoperate when: a) full TLS handshakes are
+			used, b) TLS re-negotiation is not used.
+</li>
+<li>Security considerations -- see <a class='info' href='#seccons'>Section&nbsp;10<span> (</span><span class='info'>Security Considerations</span><span>)</span></a>.
+</li>
+<li>Interoperability considerations.  As described in
+			<a class='info' href='#tls-unique'>Section&nbsp;3<span> (</span><span class='info'>The 'tls-unique' Channel Binding Type</span><span>)</span></a> the new definition
+			of the 'tls-unique' channel binding type has an
+			interoperability problem that may result in
+			spurious authentication failures unless the
+			client implements the technique described in
+			that section.
+</li>
+</ul><p>
+
+	    
+</p>
+<a name="anchor11"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.9"></a><h3>9.&nbsp;
 IANA Considerations</h3>
@@ -756,7 +807,7 @@ IANA Considerations</h3>
 		channel binding type registrations.  See the rest of
 		this document.
 </p>
-<a name="anchor13"></a><br /><hr />
+<a name="seccons"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.10"></a><h3>10.&nbsp;
 Security Considerations</h3>
@@ -790,7 +841,7 @@ Security Considerations</h3>
 		suitable as an end-point channel binding as described in
 		<a class='info' href='#RFC5056'>[RFC5056]<span> (</span><span class='info'>Williams, N., &ldquo;On the Use of Channel Bindings to Secure Channels,&rdquo; November&nbsp;2007.</span><span>)</span></a>.
 </p>
-<a name="anchor14"></a><br /><hr />
+<a name="anchor12"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.10.1"></a><h3>10.1.&nbsp;
 Cryptographic Algorithm Agility</h3>
@@ -834,7 +885,7 @@ Cryptographic Algorithm Agility</h3>
 		    randomized hashing proposals (but we cannot
 		    guarantee this, of course).
 </p>
-<a name="anchor15"></a><br /><hr />
+<a name="anchor13"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
 <a name="rfc.section.10.2"></a><h3>10.2.&nbsp;
 On Disclosure of Channel Bindings Data by
