draft-ietf-sipcore-sip-token-authnz-17

--- a/draft-ietf-sipcore-sip-token-authnz-17.html
+++ b/draft-ietf-sipcore-sip-token-authnz-17.html
@@ -24,8 +24,8 @@
 <meta content="SIP OAuth" name="keyword">
 <meta content="3rd party authentication" name="keyword">
 <meta content="Third party authentication" name="keyword">
-<meta content="draft-ietf-sipcore-sip-token-authnz-16" name="ietf.draft">
-<link href="/tmp/draft-ietf-sipcore-sip-token-authnz-16-5bffz_be.xml" rel="alternate" type="application/rfc+xml">
+<meta content="draft-ietf-sipcore-sip-token-authnz-17" name="ietf.draft">
+<link href="/tmp/draft-ietf-sipcore-sip-token-authnz-17-ac0g6jqg.xml" rel="alternate" type="application/rfc+xml">
 <link href="#copyright" rel="license">
 <style type="text/css">/*
 
@@ -1128,7 +1128,7 @@ dd.break {
 <dt class="label-workgroup">Workgroup:</dt>
 <dd class="workgroup">SIP Core</dd>
 <dt class="label-internet-draft">Internet-Draft:</dt>
-<dd class="internet-draft">draft-ietf-sipcore-sip-token-authnz-16</dd>
+<dd class="internet-draft">draft-ietf-sipcore-sip-token-authnz-17</dd>
 <dt class="label-updates">Updates:</dt>
 <dd class="updates">
 <a href="https://www.rfc-editor.org/rfc/rfc3261" class="eref">3261</a> (if approved)</dd>
@@ -1894,7 +1894,7 @@ auth-param = &lt;defined in RFC3261&gt;
       the registrar includes a scope in the response in order to indicate the minimum
       scope needed to register and access basic services. The access token might
       include an extended scope that gives the user access to more advanced features
-      beyond basic services. In SIP, the AS administrator will typicall decide what level
+      beyond basic services. In SIP, the AS administrator will typically decide what level
       of access is provided for a given user.<a href="#section-5-8" class="pilcrow">¶</a></p>
 <p id="section-5-9">
       The UAC MUST check the AS URL received in the 401/407 response
@@ -1996,8 +1996,8 @@ auth-param = &lt;defined in RFC3261&gt;
 <p id="section-7-6">
       Roman Danyliw, Benjamin Kaduk, Erik Kline, Barry Leiba, Eric Vyncke and
       Magnus Westerlund provided feedback and suggestions for improvements 
-      as part of the IESG evaluation of the document. Special thanks to Benjamin Kaduk
-      for his detailed and comprehinsive reviews and comments.<a href="#section-7-6" class="pilcrow">¶</a></p>
+      as part of the IESG evaluation of the document. Special thanks to Benjamin
+      Kaduk for his detailed and comprehensive reviews and comments.<a href="#section-7-6" class="pilcrow">¶</a></p>
 <p id="section-7-7">
       The authors would also like to specially thank Jean Mahoney for her multiple 
       reviews, editorial help, and the coversion of the XML source file from v2 to v3.<a href="#section-7-7" class="pilcrow">¶</a></p>
