draft-arkko-pana-iana-01

--- a/draft-arkko-pana-iana-01.html
+++ b/draft-arkko-pana-iana-01.html
@@ -154,9 +154,9 @@
 <tr><td class="header">Internet-Draft</td><td class="header">Ericsson</td></tr>
 <tr><td class="header">Updates: <a href='http://tools.ietf.org/html/rfc5191'>5191</a> (if&nbsp;approved)</td><td class="header">A. Yegin</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">Samsung</td></tr>
-<tr><td class="header">Expires: August 5, 2010</td><td class="header">February 01, 2010</td></tr>
+<tr><td class="header">Expires: August 15, 2010</td><td class="header">February 11, 2010</td></tr>
 </table></td></tr></table>
-<h1><br />IANA Rules for Protocol for Carrying Authentication for Network Access (PANA)<br />draft-arkko-pana-iana-00</h1>
+<h1><br />IANA Rules for Protocol for Carrying Authentication for Network Access (PANA)<br />draft-arkko-pana-iana-01</h1>
 
 <h3>Abstract</h3>
 
@@ -184,7 +184,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on August 5, 2010.</p>
+This Internet-Draft will expire on August 15, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -240,6 +240,11 @@ the PANA community is happy with such an allocation.
 <a name="rfc.section.2"></a><h3>2.&nbsp;
 IANA Considerations</h3>
 
+<p>IANA is requested to updated the registries related to PANA Message
+Types, Message Flags, AVP Flags, Result-Code AVP Values, and
+Termination-Cause AVP Values as specified below. All other PANA IANA
+registries are to remain unchanged.
+</p>
 <a name="mt"></a><br /><hr />
 <a name="rfc.section.2.1"></a><h3>2.1.&nbsp;
 Message Type</h3>
@@ -247,7 +252,8 @@ Message Type</h3>
 <p>The Message Type namespace is used to identify PANA messages.
 Message Type 0 is not used and is not assigned by IANA.  The range of
 values 1 - 65,519 are for permanent, standard message types, allocated
-by IETF Review or IESG approval <a class='info' href='#RFC5226'>[RFC5226]<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a>.
+by IETF Review or IESG approval <a class='info' href='#RFC5226'>[RFC5226]<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a>. Previously,
+the rule for this range was allocation by IETF Review only.
 <a class='info' href='#RFC5191'>[RFC5191]<span> (</span><span class='info'>Forsberg, D., Ohba, Y., Patil, B., Tschofenig, H., and A. Yegin, &ldquo;Protocol for Carrying Authentication for Network Access (PANA),&rdquo; May&nbsp;2008.</span><span>)</span></a> defined the range of values 1 - 4.  The same
 Message Type is used for both the request and the answer messages,
 except for type 1.  The Request bit distinguishes requests from
@@ -269,6 +275,8 @@ Section 6.2 of <a class='info' href='#RFC5191'>[RFC5191]<span> (</span><span cla
 2 ('C'), 3 ('A'), 4 ('P'), and 5 ('I'). Allocations from the remaining
 free bits in the PANA header Flag field are done via Standards Action
 or IESG Approval <a class='info' href='#RFC5226'>[RFC5226]<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a>.
+Previously,
+the rule for these bits was allocation by Standards Action only.
 </p>
 <a name="anchor2"></a><br /><hr />
 <a name="rfc.section.2.3"></a><h3>2.3.&nbsp;
@@ -278,27 +286,32 @@ AVP Flags</h3>
 in Section 6.3 of <a class='info' href='#RFC5191'>[RFC5191]<span> (</span><span class='info'>Forsberg, D., Ohba, Y., Patil, B., Tschofenig, H., and A. Yegin, &ldquo;Protocol for Carrying Authentication for Network Access (PANA),&rdquo; May&nbsp;2008.</span><span>)</span></a>. That RFC also assigned bit
 0 ('V'). The remaining bits are assigned via a Standards Action or
 IESG Approval <a class='info' href='#RFC5226'>[RFC5226]<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a>.
+Previously,
+the rule for these bits was allocation by Standards Action only.
 </p>
 <a name="anchor3"></a><br /><hr />
 <a name="rfc.section.2.4"></a><h3>2.4.&nbsp;
-Result-Code AVP Value</h3>
+Result-Code AVP Values</h3>
 
 <p>As defined in Section 8.7 of <a class='info' href='#RFC5191'>[RFC5191]<span> (</span><span class='info'>Forsberg, D., Ohba, Y., Patil, B., Tschofenig, H., and A. Yegin, &ldquo;Protocol for Carrying Authentication for Network Access (PANA),&rdquo; May&nbsp;2008.</span><span>)</span></a>, the
 Result-Code AVP (AVP Code 7) defines the values 0-2.
 </p>
 <p>All remaining values are available for assignment via IETF
 Review or IESG Approval <a class='info' href='#RFC5226'>[RFC5226]<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a>.
+Previously,
+the rule for these bits was allocation by IETF Review only.
 </p>
 <a name="anchor4"></a><br /><hr />
 <a name="rfc.section.2.5"></a><h3>2.5.&nbsp;
-Termination-Cause AVP Value</h3>
+Termination-Cause AVP Values</h3>
 
 <p>As defined in Section 8.9 of <a class='info' href='#RFC5191'>[RFC5191]<span> (</span><span class='info'>Forsberg, D., Ohba, Y., Patil, B., Tschofenig, H., and A. Yegin, &ldquo;Protocol for Carrying Authentication for Network Access (PANA),&rdquo; May&nbsp;2008.</span><span>)</span></a>, the
 Termination-Cause AVP (AVP Code 9) defines the values 1, 4, and
 8.
 </p>
-<p>All remaining values are available for assignment via IETF
-Review or IESG Approval <a class='info' href='#RFC5226'>[RFC5226]<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a>.
+<p>All remaining values are available for assignment via IETF Review
+or IESG Approval <a class='info' href='#RFC5226'>[RFC5226]<span> (</span><span class='info'>Narten, T. and H. Alvestrand, &ldquo;Guidelines for Writing an IANA Considerations Section in RFCs,&rdquo; May&nbsp;2008.</span><span>)</span></a>.  Previously, the rule for
+these bits was allocation by IETF Review only.
 </p>
 <a name="anchor5"></a><br /><hr />
 <a name="rfc.section.3"></a><h3>3.&nbsp;
@@ -339,12 +352,16 @@ References</h3>
 <a name="rfc.section.A"></a><h3>Appendix A.&nbsp;
 Changes from RFC 5191</h3>
 
-<p>This document changes the IANA rules for the 
-Message Type,
-Message Flags,
-AVP Flags,
-Result-Code Attribute-Value Pair (AVP) Value, and
+<p>This document changes the IANA rules for the Message Type, Message
+Flags, AVP Flags, Result-Code Attribute-Value Pair (AVP) Value, and
 Termination-Cause AVP Value.
+</p>
+<a name="anchor9"></a><br /><hr />
+<a name="rfc.section.B"></a><h3>Appendix B.&nbsp;
+Acknowledgments</h3>
+
+<p>The authors would like to thank Yoshihiro Ohba and Ralph Droms for
+reviews and comments.
 </p>
 <a name="rfc.authors"></a><br /><hr />
 <h3>Authors' Addresses</h3>
