draft-ietf-grow-geomrt-06

--- a/draft-ietf-grow-geomrt-06.html
+++ b/draft-ietf-grow-geomrt-06.html
@@ -396,10 +396,10 @@
 </tr>
 <tr>
 <td class="left">Intended status: Standards Track</td>
-<td class="right">August 17, 2011</td>
+<td class="right">August 20, 2011</td>
 </tr>
 <tr>
-<td class="left">Expires: February 18, 2012</td>
+<td class="left">Expires: February 21, 2012</td>
 <td class="right"></td>
 </tr>
 
@@ -408,7 +408,7 @@
   </table>
 
   <p class="title">Multi-threaded Routing Toolkit (MRT) Border Gateway Protocol (BGP) routing information export format with geo-location extensions<br />
-  <span class="filename">draft-ietf-grow-geomrt-05.txt</span></p>
+  <span class="filename">draft-ietf-grow-geomrt-06.txt</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document updates the  Multi-threaded Routing Toolkit (MRT) export format for Border Gateway Protocol (BGP) routing information by extending it to include optional terrestrial coordinates of a BGP Collector and its BGP Peers.  </p>
@@ -416,7 +416,7 @@
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on February 18, 2012.</p>
+<p>This Internet-Draft will expire on February 21, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -543,7 +543,7 @@ Subtype Number       Subtype Name
 <p id="rfc.section.5.p.3">As a fully fledged BGP speaker the BGP Collector can fit into any BGP topology including iBGP, eBGP, and so on. The implementation of a BGP collector in a network topology is therefore limited by that network's use of BGP.</p>
 <h1 id="rfc.section.6">
 <a href="#rfc.section.6">6.</a> Privacy Considerations</h1>
-<p id="rfc.section.6.p.1">The GEOPRIV [RFC6280] architecture requires that privacy rules attached to a location object be transmitted alongside the location information in the object. If a BGP Collector adds location coordinates to an MRT record based on GEOPRIV location objects, then it would have to include privacy rules as well. Since the MRT geo-location format does not support the the provision of privacy rules, each location entry in an MRT object is assigned the following default privacy rules [RFC4119]: </p>
+<p id="rfc.section.6.p.1">The GEOPRIV <a href="#RFC6280">[RFC6280]</a> architecture requires that privacy rules attached to a location object be transmitted alongside the location information in the object. If a BGP Collector adds location coordinates to an MRT record based on GEOPRIV location objects, then it would have to include privacy rules as well. Since the MRT geo-location format does not support the the provision of privacy rules, each location entry in an MRT object is assigned the following default privacy rules <a href="#RFC4119">[RFC4119]</a>: </p>
 <div id="#rfc.figure.4"></div>
 <pre>
 -- retransmission-allowed: True
@@ -578,6 +578,16 @@ Subtype Number       Subtype Name
 <td class="reference"><b id="RFC2119">[RFC2119]</b></td>
 <td class="top">
 <a href="mailto:sob@harvard.edu" title="Harvard University">Bradner, S.</a>, "<a href="http://tools.ietf.org/html/rfc2119">Key words for use in RFCs to Indicate Requirement Levels</a>", BCP 14, RFC 2119, March 1997.</td>
+</tr>
+<tr>
+<td class="reference"><b id="RFC4119">[RFC4119]</b></td>
+<td class="top">
+<a>Peterson, J.</a>, "<a href="http://tools.ietf.org/html/rfc4119">A Presence-based GEOPRIV Location Object Format</a>", RFC 4119, December 2005.</td>
+</tr>
+<tr>
+<td class="reference"><b id="RFC6280">[RFC6280]</b></td>
+<td class="top">
+<a>Barnes, R.</a>, <a>Lepinski, M.</a>, <a>Cooper, A.</a>, <a>Morris, J.</a>, <a>Tschofenig, H.</a> and <a>H. Schulzrinne</a>, "<a href="http://tools.ietf.org/html/rfc6280">An Architecture for Location and Location Privacy in Internet Applications</a>", BCP 160, RFC 6280, July 2011.</td>
 </tr>
 <tr>
 <td class="reference"><b id="RFC4271">[RFC4271]</b></td>
