--- a/draft-nottingham-http-new-status-03.html
+++ b/draft-nottingham-http-new-status-03.html
@@ -407,8 +407,8 @@
 <td class="right">Adobe</td>
 </tr>
 <tr>
-<td class="left">Expires: April 21, 2012</td>
-<td class="right">October 19, 2011</td>
+<td class="left">Expires: May 03, 2012</td>
+<td class="right">October 31, 2011</td>
 </tr>
 
     	
@@ -416,15 +416,18 @@
   </table>
 
   <p class="title">Additional HTTP Status Codes<br />
-  <span class="filename">draft-nottingham-http-new-status-02</span></p>
+  <span class="filename">draft-nottingham-http-new-status-03</span></p>
   
   <h1 id="rfc.abstract"><a href="#rfc.abstract">Abstract</a></h1>
 <p>This document specifies additional HyperText Transfer Protocol (HTTP) status codes for a variety of common situations.</p>
+<h1><a>Editorial Note (To be removed by RFC Editor before publication)</a></h1>
+<p>Distribution of this document is unlimited. Although this is not a work item of the HTTPbis Working Group, comments should be sent to the Hypertext Transfer Protocol (HTTP) mailing list at <a href="mailto:ietf-http-wg@w3.org">ietf-http-wg@w3.org</a>, which may be joined by sending a message with subject "subscribe" to <a href="mailto:ietf-http-wg-request@w3.org?subject=subscribe">ietf-http-wg-request@w3.org</a>.  </p>
+<p>Discussions of the HTTPbis Working Group are archived at <a href="http://lists.w3.org/Archives/Public/ietf-http-wg/">http://lists.w3.org/Archives/Public/ietf-http-wg/</a>.  </p>
 <h1 id="rfc.status"><a href="#rfc.status">Status of this Memo</a></h1>
 <p>This Internet-Draft is submitted in full conformance with the provisions of BCP 78 and BCP 79.</p>
 <p>Internet-Drafts are working documents of the Internet Engineering Task Force (IETF).  Note that other groups may also distribute working documents as Internet-Drafts.  The list of current Internet- Drafts is at http://datatracker.ietf.org/drafts/current/.</p>
 <p>Internet-Drafts are draft documents valid for a maximum of six months and may be updated, replaced, or obsoleted by other documents at any time.  It is inappropriate to use Internet-Drafts as reference material or to cite them other than as "work in progress."</p>
-<p>This Internet-Draft will expire on April 21, 2012.</p>
+<p>This Internet-Draft will expire on May 03, 2012.</p>
 <h1 id="rfc.copyrightnotice"><a href="#rfc.copyrightnotice">Copyright Notice</a></h1>
 <p>Copyright (c) 2011 IETF Trust and the persons identified as the document authors.  All rights reserved.</p>
 <p>This document is subject to BCP 78 and the IETF Trust's Legal Provisions Relating to IETF Documents (http://trustee.ietf.org/license-info) in effect on the date of publication of this document.  Please review these documents carefully, as they describe your rights and restrictions with respect to this document.  Code Components extracted from this document must include Simplified BSD License text as described in Section 4.e of the Trust Legal Provisions and are provided without warranty as described in the Simplified BSD License.</p>
@@ -479,7 +482,6 @@
   <h1 id="rfc.section.1">
 <a href="#rfc.section.1">1.</a> Introduction</h1>
 <p id="rfc.section.1.p.1">This document specifies additional HTTP <a href="#RFC2616">[RFC2616]</a> status codes for a variety of common situations, to improve interoperability and avoid confusion when other, less precise status codes are used.</p>
-<p id="rfc.section.1.p.2">Feedback should occur on the ietf-http-wg@w3.org mailing list, although this draft is NOT a work item of the IETF HTTPbis Working Group. </p>
 <h1 id="rfc.section.2">
 <a href="#rfc.section.2">2.</a> Requirements</h1>
 <p id="rfc.section.2.p.1">The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT", "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this document are to be interpreted as described in <a href="#RFC2119">[RFC2119]</a>.</p>
@@ -572,21 +574,22 @@ Host: www.example.com
 <div id="#rfc.figure.5"></div>
 <pre>
 HTTP/1.1 511 Network Authentication Required
-Refresh: 0; url=https://login.example.net/
 Content-Type: text/html
 
 &lt;html&gt;
    &lt;head&gt;
       &lt;title&gt;Network Authentication Required&lt;/title&gt;
+      &lt;meta http-equiv="refresh" 
+            content="0; url=https://login.example.net/"&gt;
    &lt;/head&gt;
    &lt;body&gt;
       &lt;p&gt;You need to &lt;a href="https://login.example.net/"&gt;
-      authenticate with the local network&lt;/a&gt; in order to get 
+      authenticate with the local network&lt;/a&gt; in order to gain 
       access.&lt;/p&gt;
    &lt;/body&gt;
 &lt;/html&gt;
 </pre>
-<p id="rfc.section.6.1.p.5">Here, the 511 status code assures that non-browser clients will not interpret the response as being from the origin server, and the Refresh header redirects the user agent to the login server (an HTML META element can be used for this as well).</p>
+<p id="rfc.section.6.1.p.5">Here, the 511 status code assures that non-browser clients will not interpret the response as being from the origin server, and the META HTML element redirects the user agent to the login server.</p>
 <p id="rfc.section.6.1.p.6">Note that the 511 response can itself contain the login interface, but it may not be desirable to do so, because browsers would show the login interface as being associated with the originally requested URL, which may cause confusion.</p>
 <h1 id="rfc.section.7">
 <a href="#rfc.section.7">7.</a> Security Considerations</h1>
@@ -666,7 +669,7 @@ Content-Type: text/html
 </tbody></table>
 <h1 id="rfc.appendix.Appendix A">
 <a href="#rfc.appendix.Appendix%20A">Appendix A.</a> Acknowledgements</h1>
-<p id="rfc.section.Appendix A.p.1">Thanks to Jan Algermissen for his suggestions and feedback.  </p>
+<p id="rfc.section.Appendix A.p.1">Thanks to Jan Algermissen and Julian Reschke for their suggestions and feedback.  </p>
 <p id="rfc.section.Appendix A.p.2">The authors take all responsibility for errors and omissions.</p>
 <h1 id="rfc.appendix.Appendix B">
 <a href="#rfc.appendix.Appendix%20B">Appendix B.</a> <a href="#issues" id="issues">Issues Raised by Captive Portals</a>
@@ -674,7 +677,7 @@ Content-Type: text/html
 <p id="rfc.section.Appendix B.p.1">Since clients cannot differentiate between a portal's response and that of the HTTP server that they intended to communicate with, a number of issues arise.</p>
 <p id="rfc.section.Appendix B.p.2">One example is the "favicon.ico" <a href="http://en.wikipedia.org/wiki/Favicon">http://en.wikipedia.org/wiki/Favicon</a> commonly used by browsers to identify the site being accessed. If the favicon for a given site is fetched from a captive portal instead of the intended site (e.g., because the user is unauthenticated), it will often "stick" in the browser's cache (most implementations cache favicons aggressively) beyond the portal session, so that it seems as if the portal's favicon has "taken over" the legitimate site.</p>
 <p id="rfc.section.Appendix B.p.3">Another browser-based issue comes about when P3P <a href="http://www.w3.org/TR/P3P/">http://www.w3.org/TR/P3P/</a> is supported. Depending on how it is implemented, it's possible a browser might interpret a portal's response for the p3p.xml file as the server's, resulting in the privacy policy (or lack thereof) advertised by the portal being interpreted as applying to the intended site. Other Web-based protocols such as WebFinger <a href="http://code.google.com/p/webfinger/wiki/WebFingerProtocol">http://code.google.com/p/webfinger/wiki/WebFingerProtocol</a>, CORS <a href="http://www.w3.org/TR/cors/">http://www.w3.org/TR/cors/</a> and OAuth <a href="http://tools.ietf.org/html/draft-ietf-oauth-v2">http://tools.ietf.org/html/draft-ietf-oauth-v2</a> may also be vulnerable to such issues.</p>
-<p id="rfc.section.Appendix B.p.4">Although HTTP is most widely used with Web browsers, a growing number of non-browsing applications use it as a substrate protocol. For example, WebDAV <a href="#RFC4918">[RFC4918]</a> and CalDAV <a href="#RFC4791">[RFC4791]</a> both use HTTP as the basis (for network filesystem access and calendaring, respectively). Using these applications from behind a captive portal can result in spurious errors being presented to the user, and might result in content corruption, in extreme cases.</p>
+<p id="rfc.section.Appendix B.p.4">Although HTTP is most widely used with Web browsers, a growing number of non-browsing applications use it as a substrate protocol. For example, WebDAV <a href="#RFC4918">[RFC4918]</a> and CalDAV <a href="#RFC4791">[RFC4791]</a> both use HTTP as the basis (for remote authoring and calendaring, respectively). Using these applications from behind a captive portal can result in spurious errors being presented to the user, and might result in content corruption, in extreme cases.</p>
 <p id="rfc.section.Appendix B.p.5">Similarly, other non-browser applications using HTTP can be affected as well; e.g., widgets <a href="http://www.w3.org/TR/widgets/">http://www.w3.org/TR/widgets/</a>, software updates, and other specialised software such as Twitter clients and the iTunes Music Store.</p>
 <p id="rfc.section.Appendix B.p.6">It should be noted that it's sometimes believed that using HTTP redirection to direct traffic to the portal addresses these issues.  However, since many of these uses "follow" redirects, this is not a good solution.</p>
 <h1 id="rfc.authors"><a href="#rfc.authors">Authors' Addresses</a></h1>
