draft-ietf-avt-rtp-gsm-hr-02

--- a/draft-ietf-avt-rtp-gsm-hr-02.html
+++ b/draft-ietf-avt-rtp-gsm-hr-02.html
@@ -155,15 +155,15 @@
 <tr><td class="header">Network Working Group</td><td class="header">X. Duan</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">S. Wang</td></tr>
 <tr><td class="header">Intended status: Standards Track</td><td class="header">China Mobile Communications</td></tr>
-<tr><td class="header">Expires: March 27, 2010</td><td class="header">Corporation</td></tr>
+<tr><td class="header">Expires: April 3, 2010</td><td class="header">Corporation</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">M. Westerlund</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">K. Hellwig</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">I. Johansson</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">Ericsson AB</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">September 23, 2009</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">September 30, 2009</td></tr>
 </table></td></tr></table>
 <h1><br />RTP Payload format for
-    GSM-HR<br />draft-ietf-avt-rtp-gsm-hr-01</h1>
+    GSM-HR<br />draft-ietf-avt-rtp-gsm-hr-02</h1>
 
 <h3>Status of this Memo</h3>
 <p>
@@ -186,7 +186,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on March 27, 2010.</p>
+This Internet-Draft will expire on April 3, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -201,14 +201,10 @@ rights and restrictions with respect to this document.</p>
 
 <h3>Abstract</h3>
 
-<p>This document specifies the RTP payload format for packetization of
-      the encoded output of the GSM Half-Rate speech codec .
-</p>
-<h3>Requirements Language</h3>
-
-<p>The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
-      "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
-      document are to be interpreted as described in <a class='info' href='#RFC2119'>RFC 2119<span> (</span><span class='info'>Bradner, S., &ldquo;Key words for use in RFCs to Indicate Requirement Levels,&rdquo; March&nbsp;1997.</span><span>)</span></a> [RFC2119].
+<p>This document specifies the payload format for packetization of the
+      GSM Half-Rate speech codec data into the Real-time Transport Protocol
+      (RTP). The payload format supports transmission of multiple frames per
+      payload and packet loss robustness methods using redundancy. 
 </p><a name="toc"></a><br /><hr />
 <h3>Table of Contents</h3>
 <p class="toc">
@@ -311,6 +307,10 @@ Conventions</h3>
       fields in figures are read left to right and then down. The left most
       bit in each field is the most significant. The numbering starts from 0
       and ascends, where bit 0 will be the most significant.
+</p>
+<p>The key words "MUST", "MUST NOT", "REQUIRED", "SHALL", "SHALL NOT",
+      "SHOULD", "SHOULD NOT", "RECOMMENDED", "MAY", and "OPTIONAL" in this
+      document are to be interpreted as described in <a class='info' href='#RFC2119'>RFC 2119<span> (</span><span class='info'>Bradner, S., &ldquo;Key words for use in RFCs to Indicate Requirement Levels,&rdquo; March&nbsp;1997.</span><span>)</span></a> [RFC2119].
 </p>
 <a name="anchor3"></a><br /><hr />
 <table summary="layout" cellpadding="0" cellspacing="2" class="TOCbug" align="right"><tr><td class="TOCbug"><a href="#toc">&nbsp;TOC&nbsp;</a></td></tr></table>
