draft-ietf-hip-native-api-11

--- a/draft-ietf-hip-native-api-11.html
+++ b/draft-ietf-hip-native-api-11.html
@@ -153,11 +153,11 @@
 <tr><td class="header">Host Identity Protocol</td><td class="header">M. Komu</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">Helsinki Institute for Information</td></tr>
 <tr><td class="header">Intended status: Experimental</td><td class="header">Technology</td></tr>
-<tr><td class="header">Expires: June 16, 2010</td><td class="header">T. Henderson</td></tr>
+<tr><td class="header">Expires: July 2, 2010</td><td class="header">T. Henderson</td></tr>
 <tr><td class="header">&nbsp;</td><td class="header">The Boeing Company</td></tr>
-<tr><td class="header">&nbsp;</td><td class="header">December 13, 2009</td></tr>
+<tr><td class="header">&nbsp;</td><td class="header">December 29, 2009</td></tr>
 </table></td></tr></table>
-<h1><br />Basic Socket Interface Extensions for Host Identity Protocol (HIP)<br />draft-ietf-hip-native-api-10</h1>
+<h1><br />Basic Socket Interface Extensions for Host Identity Protocol (HIP)<br />draft-ietf-hip-native-api-11</h1>
 
 <h3>Abstract</h3>
 
@@ -192,7 +192,7 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on June 16, 2010.</p>
+This Internet-Draft will expire on July 2, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
@@ -547,7 +547,7 @@ Socket Family and Address Structure Extensions</h3>
      If HIP is not supported, socket() follows its default behaviour and returns -1 and sets errno to EAFNOSUPPORT.
 </p>
 <p><a class='info' href='#fig:sockaddr_hip'>Figure&nbsp;2</a> shows the recommended implementation of the socket address
-        structure for HIP in POSIX.1.g format.
+        structure for HIP in POSIX format.
 </p><br /><hr class="insert" />
 <a name="fig:sockaddr_hip"></a>
 <div style='display: table; width: 0; margin-left: 3em; margin-right: auto'><pre>
@@ -565,8 +565,7 @@ Socket Family and Address Structure Extensions</h3>
 </pre></div><table border="0" cellpadding="0" cellspacing="2" align="center"><tr><td align="center"><font face="monaco, MS Sans Serif" size="1"><b>&nbsp;Figure&nbsp;2&nbsp;</b></font><br /></td></tr></table><hr class="insert" />
 
 <p>uint8_t ship_len:
-       This field is optional in POSIX.1.g (and 4.3BSD-RENO).
-       The field defines the length of the structure. Implementations that
+       This field defines the length of the structure. Implementations that
        do not define this field typically embed the information in the
        following ship_family field.
     
@@ -653,7 +652,7 @@ Extensions to Resolver Data Structures</h3>
 
 <p>The HIP APIs introduce a new address family, AF_HIP, that
          HIP-aware applications can use to control the address type returned
-         from the getaddrinfo() function <a class='info' href='#RFC3493'>[RFC3493]<span> (</span><span class='info'>Gilligan, R., Thomson, S., Bound, J., McCann, J., and W. Stevens, &ldquo;Basic Socket Interface Extensions for IPv6,&rdquo; February&nbsp;2003.</span><span>)</span></a>.
+         from the getaddrinfo() function <a class='info' href='#RFC3493'>[RFC3493]<span> (</span><span class='info'>Gilligan, R., Thomson, S., Bound, J., McCann, J., and W. Stevens, &ldquo;Basic Socket Interface Extensions for IPv6,&rdquo; February&nbsp;2003.</span><span>)</span></a>, <a class='info' href='#POSIX'>[POSIX]<span> (</span><span class='info'>Institute of Electrical and Electronics Engineers, &ldquo;IEEE Std. 1003.1-2001 Standard for Information Technology -                Portable Operating System Interface (POSIX),&rdquo; Dec&nbsp;2001.</span><span>)</span></a>.
          The getaddrinfo() function uses a data structure called addrinfo
          in its "hints" and "res" argument which is described in more
          detail in the next section. The addrinfo data structure is
