draft-haberman-rpsl-reachable-test-03

--- a/draft-haberman-rpsl-reachable-test-03.html
+++ b/draft-haberman-rpsl-reachable-test-03.html
@@ -152,10 +152,10 @@
 <table summary="layout" width="66%" border="0" cellpadding="0" cellspacing="0"><tr><td><table summary="layout" width="100%" border="0" cellpadding="2" cellspacing="1">
 <tr><td class="header">IETF</td><td class="header">B. Haberman, Ed.</td></tr>
 <tr><td class="header">Internet-Draft</td><td class="header">JHU APL</td></tr>
-<tr><td class="header">Intended status: Standards Track</td><td class="header">November 09, 2009</td></tr>
-<tr><td class="header">Expires: May 13, 2010</td><td class="header">&nbsp;</td></tr>
+<tr><td class="header">Intended status: Standards Track</td><td class="header">February 19, 2010</td></tr>
+<tr><td class="header">Expires: August 23, 2010</td><td class="header">&nbsp;</td></tr>
 </table></td></tr></table>
-<h1><br />A Dedicated RPSL Interface Identifier for Operational Testing<br />draft-haberman-rpsl-reachable-test-02</h1>
+<h1><br />A Dedicated RPSL Interface Identifier for Operational Testing<br />draft-haberman-rpsl-reachable-test-03</h1>
 
 <h3>Abstract</h3>
 
@@ -188,11 +188,11 @@ The list of current Internet-Drafts can be accessed at
 The list of Internet-Draft Shadow Directories can be accessed at
 <a href='http://www.ietf.org/shadow.html'>http://www.ietf.org/shadow.html</a>.</p>
 <p>
-This Internet-Draft will expire on May 13, 2010.</p>
+This Internet-Draft will expire on August 23, 2010.</p>
 
 <h3>Copyright Notice</h3>
 <p>
-Copyright (c) 2009 IETF Trust and the persons identified as the
+Copyright (c) 2010 IETF Trust and the persons identified as the
 document authors.  All rights reserved.</p>
 <p>
 This document is subject to BCP 78 and the IETF Trust's Legal
@@ -265,12 +265,12 @@ RPSL Extension for Diagnostic Address</h3>
 <tr>
 <td align="center">pingable</td>
 <td align="center">&lt;ipv6-address&gt; or &lt;ipv4-address&gt;</td>
-<td align="center">mandatory, multi-valued</td>
+<td align="center">optional, multi-valued</td>
 </tr>
 <tr>
 <td align="center">ping-hdl</td>
 <td align="center">&lt;nic-handle&gt;</td>
-<td align="center">mandatory, multi-valued</td>
+<td align="center">optional, multi-valued</td>
 </tr>
 </table>
 <br clear="all" />
@@ -317,7 +317,7 @@ Acknowledgements</h3>
 <p>Randy Bush and David Farmer provided the original concept for the pingable
          attribute and useful comments on preliminary versions of this draft.  Joe Abley
          provided comments that justified moving the attribute to the route/route6 object and
-         the inclusion of a point of contact. Larry Blunk provided useful comments to
+         the inclusion of a point of contact. Larry Blunk and Tony Tauber provided useful comments to
          improve the document.
 </p>
 <a name="rfc.references"></a><br /><hr />
